# nowide

./: .clang-format  .gitignore  CMakeLists.txt  CMakeSettings.json  Config.cmake.in  README.md  appveyor.yml
.github/workflows/: ci_tests.yml  release.yml
cmake/: NowideAddOptions.cmake
doc/: Doxyfile  main.dox  main.txt
include/boost/nowide/: args.hpp  cenv.hpp  config.hpp  convert.hpp  cstdio.hpp  cstdlib.hpp  filebuf.hpp  filesystem.hpp  fstream.hpp  iostream.hpp  stackstring.hpp  system.hpp  utf8_codecvt.hpp  windows.hpp
include/boost/nowide/detail/: convert.hpp  utf.hpp
include/boost/nowide/integration/: filesystem.hpp
include/nowide/: args.hpp  config.hpp  convert.hpp  cstdio.hpp  cstdlib.hpp  filebuf.hpp  filesystem.hpp  fstream.hpp  ios.hpp  iostream.hpp  stackstring.hpp  stat.hpp  utf8_codecvt.hpp
include/nowide/detail/: convert.hpp  utf.hpp
include/nowide/utf/: convert.hpp  utf.hpp
src/: args.cpp  cstdio.cpp  cstdlib.cpp  iostream.cpp  stat.cpp
standalone/: config.hpp  cstdint.hpp  encoding_errors.hpp  scoped_ptr.hpp  static_assert.hpp  utf.hpp
test/: CMakeLists.txt  Jamfile.v2  benchmark_fstream.cpp  test.hpp  test_codecvt.cpp  test_convert.cpp  test_env.cpp  test_fs.cpp  test_fstream.cpp  test_fstream_cxx11.cpp  test_iostream.cpp  test_sets.hpp  test_stackstring.cpp  test_stat.cpp  test_stdio.cpp  test_system.cpp
test/exampleProject/: CMakeLists.txt  example_main.cpp
tools/: create_standalone.sh
